Optimized mobile contact bar for ultra-slim design
- Made contact bar much slimmer on mobile devices
- Progressive hiding: WhatsApp and business hours hidden on tablet
- Smart text switching: Full contact info becomes short labels on mobile
- Reduced social media icons to essential only (Facebook & Twitter)
- Completely hide social media on extra small screens (360px)
- Added contact-essential and contact-optional classes for better control
- Improved responsive design with minimal padding and compact layout
- Enhanced user experience with touch-friendly essential contact info

--- a/index.html
+++ b/index.html
@@ -96,19 +96,25 @@
             <div class="container">
                 <div class="contact-bar-content">
                     <div class="contact-info">
-                        <div class="contact-item">
+                        <div class="contact-item contact-essential">
                             <span class="contact-icon">📧</span>
-                            <a href="mailto:info@shristipress.com" class="contact-link">info@shristipress.com</a>
+                            <a href="mailto:info@shristipress.com" class="contact-link">
+                                <span class="contact-full">info@shristipress.com</span>
+                                <span class="contact-short">Email</span>
+                            </a>
                         </div>
-                        <div class="contact-item">
+                        <div class="contact-item contact-essential">
                             <span class="contact-icon">📞</span>
-                            <a href="tel:+919876543210" class="contact-link">+91 98765 43210</a>
+                            <a href="tel:+919876543210" class="contact-link">
+                                <span class="contact-full">+91 98765 43210</span>
+                                <span class="contact-short">Call</span>
+                            </a>
                         </div>
-                        <div class="contact-item">
+                        <div class="contact-item contact-optional">
                             <span class="contact-icon">💬</span>
                             <a href="https://wa.me/919876543210" class="contact-link" target="_blank">WhatsApp</a>
                         </div>
-                        <div class="contact-item">
+                        <div class="contact-item contact-optional">
                             <span class="contact-icon">🕒</span>
                             <span class="contact-text">Mon-Sat: 9AM-7PM</span>
                         </div>
