--- a/services/childrens-book-printing.html
+++ b/services/childrens-book-printing.html
@@ -34,6 +34,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
 <body>
@@ -1026,6 +1027,7 @@
         </div>
     </footer>
 
+    <script src="../js/dark-mode.js"></script>
 </body>
 
 </html>
