--- a/services/cosmetic-paper-boxes.html
+++ b/services/cosmetic-paper-boxes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -771,6 +771,7 @@
     </style>
     <!-- Main Site Styles -->
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
 <body>
@@ -1520,6 +1521,7 @@
 
     <!-- Main Site Scripts -->
     <script defer src="../js/script.js"></script>
+    <script src="../js/dark-mode.js"></script>
 </body>
 
 </html>
