--- a/services/flyers.html
+++ b/services/flyers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <link rel="stylesheet" href="../css/style.css">
@@ -55,6 +55,7 @@
             }
         }
     </style>
+    <link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
 <body class="bg-gray-50">
@@ -1060,6 +1061,7 @@
         </div>
     </footer>
 
+    <script src="../js/dark-mode.js"></script>
 </body>
 
 </html>
