--- a/services/poster.html
+++ b/services/poster.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <link rel="stylesheet" href="../css/style.css">
@@ -9,6 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
+            darkMode: 'class',
             theme: {
                 extend: {
                     colors: {
@@ -84,6 +85,7 @@
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
         }
     </style>
+    <link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
 <body class="bg-white font-sans">
@@ -1178,6 +1180,7 @@
             });
         });
     </script>
+    <script src="../js/dark-mode.js"></script>
 </body>
 
 </html></button> <!-- I
@@ -2114,6 +2117,7 @@ nteractive Size Guide -->
             });
         });
     </script>
-    </body>
+        <script src="../js/dark-mode.js"></script>
+</body>
 
     </html>
