--- a/services/retail-paper-boxes.html
+++ b/services/retail-paper-boxes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -833,6 +833,7 @@
             font-weight: 900;
         }
     </style>
+    <link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
 <body>
@@ -1732,6 +1733,7 @@
 
         <!-- Main Site Scripts -->
         <script defer src="../js/script.js"></script>
+    <script src="../js/dark-mode.js"></script>
 </body>
 
 </html>
