--- a/services/standees.html
+++ b/services/standees.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -1015,6 +1015,7 @@
             }
         }
     </style>
+    <link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
 <body>
@@ -2276,6 +2277,7 @@
             }
         });
     </script>
+    <script src="../js/dark-mode.js"></script>
 </body>
 
 </html>""
