--- a/categories.html
+++ b/categories.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -124,6 +124,7 @@
             width: 100%;
         }
     </style>
+    <link rel="stylesheet" href="css/dark-mode.css">
 </head>
 
 <body class="bg-gray-50">
@@ -713,6 +714,7 @@
 
     <!-- Main Site Scripts -->
     <script defer src="js/script.js"></script>
+    <script src="js/dark-mode.js"></script>
 </body>
 
 </html>
