--- a/services/business-cards.html
+++ b/services/business-cards.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/services.css">
+    <link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 <body class="font-inter bg-white text-gray-900">
     <!-- Skip to Content (Accessibility) -->
@@ -287,5 +288,6 @@
         AOS.init({duration: 800, once: true});
         document.addEventListener('DOMContentLoaded', function() { new ServicePageManager(); });
     </script>
+    <script src="../js/dark-mode.js"></script>
 </body>
 </html>
