--- a/services/dangler.html
+++ b/services/dangler.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -11,6 +11,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
+            darkMode: 'class',
             theme: {
                 extend: {
                     colors: {
@@ -494,6 +495,7 @@
             background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);
         }
     </style>
+    <link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
 <body class="font-inter bg-white text-gray-900">
@@ -1858,6 +1860,7 @@
 
     <!-- Main Site Scripts -->
     <script defer src="../js/script.js"></script>
+    <script src="../js/dark-mode.js"></script>
 </body>
 
 </html>
